# ware-log

./: .gitignore  CMakeLists.txt  README.md  main.cpp  project.qdocconf
android/: AndroidManifest.xml  build.gradle
android/res/values/: strings.xml
assets/: sample_data.json
doc/tutorial/: 01-data.html  02-listview.html  03-delete.html  04-theme.html  05-insert.html  06-darkmode.html  07-weight.html  08-update.html  09-setup.html  10-startdb.html  tutorial.html  warelog.index
doc/tutorial-files/: collection_settings.qdoc  custom_weight_component.qdoc  darkmode.qdoc  delete_item.qdoc  display_data.qdoc  home.qdoc  insert_item.qdoc  prepare_data.qdoc  setup.qdoc  start-new-db.qdoc  theme_colors.qdoc  update_weight_and_cost.qdoc
qml/: CollectionDelegate.qml  CollectionDelegatePreview.qml  CollectionSettingsView.qml  ColorButton.qml  EditItemView.qml  LabeledTextField.qml  LightDarkComboBox.qml  Main.qml  NumberInputDialog.qml  SwipableCollectionDelegate.qml  WeightIndicator.qml  config.json  data.js
src/app/: CMakeLists.txt  Main.qml  main.cpp
